Tue Apr 10 16:46:09 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.cc: Define XAPIAN_TCPSRV and
	  XAPIAN_PROGSRV under UNIX too, and use them everywhere.

Tue Apr 10 16:33:48 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.h: Remove "BackendManager::" from
	  method declaration.

Tue Apr 10 15:35:50 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Define HAVE_SOCKETPAIR if we have socketpair().

Tue Apr 10 15:29:49 BST 2007  Olly Betts <olly@survex.com>

	* net/progclient.cc: Fix #endif placement so it compiles on UNIX.

Tue Apr 10 14:18:06 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Remove debugging code.

Tue Apr 10 12:57:51 BST 2007  Olly Betts <olly@survex.com>

	* backends/dbfactory_remote.cc,common/progclient.h,net/progclient.cc,
	  net/remoteconnection.cc,tests/api_db.cc,tests/apitest.cc,
	  tests/harness/backendmanager.cc,tests/harness/backendmanager.h:
	  Add support for the "prog" variant of the remote backend (patch
	  started by me, finished by Mark Hammond).

Tue Apr 10 12:23:46 BST 2007  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc,backends/inmemory/inmemory_database.cc,
	  backends/quartz/quartz_alldocspostlist.cc,matcher/localmatch.cc,
	  matcher/multimatch.cc,tests/harness/testutils.cc: Prefer
	  `CONTAINER.empty()' to `CONTAINER.size() == 0'.

Tue Apr 10 12:09:45 BST 2007  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc: Tighten up an assertion.

Mon Apr 09 20:56:23 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac,tests/harness/backendmanager.cc,tests/runsrv.in,
	  tests/runtest.in: Run the remote backend server using new "runsrv"
	  script instead of "runtest".  This doesn't echo anything to stdout,
	  and if valgrind is in use, runs the remote server under
	  "--tool=none" which is much quicker than using valgrind's default
	  memcheck tool (we need to run the remote server under valgrind