@@ -1,3 +1,8 @@
+Tue Apr 10 17:35:57 BST 2007  Olly Betts <olly@survex.com>
+
+	* tests/harness/backendmanager.cc: Fix "if" to "is" typo in 3
+	  comments.
+
 Tue Apr 10 16:46:09 BST 2007  Olly Betts <olly@survex.com>
 
 	* tests/harness/backendmanager.cc: Define XAPIAN_TCPSRV and
